--- a/style.css
+++ b/style.css
@@ -19,3 +19,22 @@
     padding: 9px 25px;
     cursor: pointer;
 }
+.cat1, .cat2, .cat3{
+    padding: 10px 30px;
+    border-radius: 5px;
+}
+.cat1{
+    background-image: linear-gradient(90deg, orangered, tomato);
+}
+.cat2{
+    background-image: linear-gradient(90deg, #FF136F , #FF136F);
+}
+.cat3{
+    background-image: linear-gradient(90deg, blue, cyan);
+}
+.categories h1{
+    color: white;
+}
+.categories img{
+    width: 120px;
+}
